--- a/style.css
+++ b/style.css
@@ -1,168 +1,41 @@
 *{
-    margin: 0;
-    padding: 0;
+    text-decoration: none;
 }
-
-.main{
-    width:100%;
-    background:linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(background.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
-}
-
 .navbar{
-    width: 1200px;
-    height: 75px;
-    margin: auto;
+    background: #ff004f;
+    font-family: sans-serif;
+    padding-right: 15px;
+    padding-left: 15px;
 }
-
-.icon{
-    width: 200px;
-    float: left;
-    height: 70px;
-}
-
-.logo{  
-    color: #ff7200 ;
-    font-size: 32px;
-    font-family: Arial;
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-}
-
-
-
-.menu{
-  width: 400px;
-  float: left;
-  height: 70px;
-
-}
-
-.menu:hover{
-    color: #ff7200;
-}
-
-ul{   
-    float: left;
+.navdiv{
     display: flex;
-    justify-content: center;
-    align-items: right;
-    padding-left: 40px;
+    justify-content: space-between;
+    align-items: center
 }
-
-ul li{
+.logo a {
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+}
+li{
+    display: inline-block;
     list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
 }
-
-ul li a{
-    text-decoration: none;
-    color: #fefffd;
-    font-family: Arial;
+ li a{
+    color: white;
+    font-size: 18px;
     font-weight: bold;
-    transition: 0.4s ease-in-out;
+    margin-right: 25px;
+}
+li a:hover{
+    color: black;
+}
+ button {
+    background: #00f0b0;
+    color: #ff004f;
+    padding: 10px 15px;
+    border-radius: 5px;
+    border-color: aliceblue;
 }
 
-ul li a:hover{
-    color: #ff7200;  
-}
 
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-
-}
-
-.srch{
-    font-family: 'Times New Roman';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-}
-
-.btn{
-    width: 100px;
-    height: 40px;
-    background: #ff7200;
-    border: 2px solid #ff7200;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.btn:focus{
-    outline: none;   
-}
-
-.srch:focus{
-    outline: none;
-}
-
-.content{
-     width: 1200px;
-     height: auto;
-     margin: auto;
-     color: #fff;
-     position: relative;
-}
-
-.content .par{
-   padding-left: 20px;
-   padding-bottom: 25px;
-   font-family: Arial;
-   letter-spacing: 1.2px;
-   line-height: 30px; 
-}
-
-.content h2{
-    font-family:'Times New Roman';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: none;
-    letter-spacing: 2px;
-}
-
-.content .cn{
-width: 160px;
-height: 40px;
-background: #ff7200;
-border: none;
-margin-bottom: 10px;
-margin-left: 20px;
-font-size: 18px;
-border-radius: 10px;
-cursor: pointer;
-transition: .4s ease;
-}
-
-.content .cn a{
-    text-decoration: none;
-    color:#000 ;
-    transition: .3s ease;
-}
-
-.cn:hover{
-background-color: #fff;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 60px;
-}
