--- a/Pet_adoption/user/trial.css
+++ b/Pet_adoption/user/trial.css
@@ -7,7 +7,7 @@
   .background{
     width: 100%;
     height:120vh;
-    background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0,0,0,0.40)),url(background.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0,0,0,0.40)),url(img/background.jpg);
     background-size: cover;
     background-position: fixed;
   }
