--- a/Pet_adoption/user/dogcatList.css
+++ b/Pet_adoption/user/dogcatList.css
@@ -2,6 +2,7 @@
   .main{
     margin-left: 200px;
     display: inline;
+   
 
   }
   
@@ -18,6 +19,7 @@
   .main1{
     margin-left: 200px;
     display: inline;
+    background-color:#f7e7ce ;
 
   }
   
